<resources>
    <string name="app_name">amemo</string>
    <string name="arrow_image">arrow image</string>
    <string name="find_pwd">找回密码</string>
    <string name="login_phone">手机登录</string>
    <string name="register_usr">注册用户</string>
    <string name="title_activity_after_login">AfterLoginActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="memo">备忘</string>
    <string name="group">群组</string>
    <string name="settings">设置</string>
    <string name="amemo">Amemo</string>
    <string name="let_us_memo">Let Us Memo</string>
    <string name="todo">TODO</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="use_saved_token">使用保存的 token 登录…</string>
    <string name="request_failed">请求发送失败</string>
    <string name="no_response">服务器未响应</string>
    <string name="response_parse_failure">返回消息解析失败</string>
    <string name="invalid_token">token 已失效，请重新登录</string>
    <string name="incorrect_username_or_password">用户名或密码不正确</string>
    <string name="inconsistent_password">两次输入的密码需保持一致</string>
    <string name="register_success">注册成功！</string>
    <string name="register_failure">注册失败，用户名重复</string>
    <string name="create_group_failure">创建群组失败</string>
    <string name="create_group_success">创建群组成功！</string>
    <string name="group_does_not_exist">群组不存在</string>
    <string name="create_memo_failure">创建备忘录失败</string>
    <string name="create_memo_success">创建备忘录成功！</string>
    <string name="new_memo_created">有用户新建了备忘录！</string>
    <string name="invite_user_success">邀请用户成功！</string>
    <string name="only_owner_can_invite">只有群主才能邀请用户</string>
    <string name="cannot_invite_yourself">不能邀请自己！</string>
    <string name="user_already_in_group">用户已经在群组中！</string>
    <string name="invite_user_failure">邀请用户失败</string>
    <string name="invited_to_new_group">您被邀请至新的群组</string>
    <string name="new_member_to_group">有新用户加入了群组</string>
    <string name="select_group_hint">请选择要发布的群组</string>
    <string name="special_interest_success">成功设为特别关心！</string>
    <string name="follow_success">成功关注用户！</string>
    <string name="unfollow_success">成功取消关注！</string>
    <string name="emphasize_success">成功设为特别关心！</string>
    <string name="follow_failed">关注失败</string>
    <string name="note_success">成功设为提醒！</string>
    <string name="unnote_success">成功取消提醒！</string>
    <string name="user_does_not_exist">用户不存在</string>
    <string name="subscribe_failed">连接至订阅频道失败</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_demo_settings">DemoSettingsActivity</string>
    <string name="title_activity_in_group">InGroupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submitMemo">提交</string>
    <string name="send_memo_text">发送备忘录</string>
    <string name="textInputTime">请输入时间</string>
    <string name="textInputTitle">请输入标题</string>
    <string name="textInputContent">请输入内容</string>
    <string name="inputGroupContent">请输入群描述</string>
    <string name="inputGroupTitle">请输入群名称</string>
    <string name="textCreateGroup">创建群组</string>
    <string name="btnCreateGroup">创建</string>
    <string name="registerUser">注册用户</string>
    <string name="registerTwicePwd">请再次输入密码</string>
    <string name="registerPwd">请输入密码</string>
    <string name="registerUsrName">请输入用户名</string>
    <string name="registerText">注册用户</string>
    <string name="invite_user">邀请用户</string>
    <string name="InputGroupIDText">请输入群ID</string>
    <string name="InputUserIDText">请输入用户ID</string>
    <string name="inviteText">邀请</string>
    <string name="createNewMemo">新建</string>
    <string name="inviteNewUser">邀请</string>
    <string name="strongRemind">强关心</string>
    <string name="Remind">提醒</string>
    <string name="textFunctionIntro">功能介绍</string>
</resources>