<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/corner_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textRegisterUser"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/registerText"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextInputRegisterUserName"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_form_item"
            android:ems="10"
            android:hint="@string/registerUsrName"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextInputRegisterPassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_form_item"
            android:ems="10"
            android:hint="@string/registerPwd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:text="" />

        <EditText
            android:id="@+id/editTextInputRegisterTwicePassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_form_item"
            android:ems="10"
            android:hint="@string/registerTwicePwd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:text="" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/submit_memo_shape"
            android:text="@string/registerUser" />

    </LinearLayout>

</RelativeLayout>

